--- a/front/index.html
+++ b/front/index.html
@@ -10,24 +10,19 @@
     <div class="contents" id="contents">
         <div class="title">PDF to Markdown Converter<br>with Mistral OCR</div>
         <div class="input-box">
-            <p class="title-mistral-api-key">Enter your Mistral API Key</p>
-
             <form id="upload-form">
-                <input type="file" id="file-input" name="file" accept=".pdf"/>
-                <button type="submit">Upload</button>
-            </form>
-
-            <form id="api-form-js" class="api-form">
+                <button id="file-button">Select PDF</button>
+                <input type="file" id="file-input" accept=".pdf"/>
                 <input type="text" name="apiKey" placeholder="Enter API key" required>
                 <button type="submit">Submit</button>
             </form>
-
-
 
             <a href="" class="get-api-key">How to get Mistral API Key?</a>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
