image checkbox logic + front

--- a/front/index.html
+++ b/front/index.html
@@ -14,6 +14,7 @@
                 <button id="file-button">Select PDF</button>
                 <input type="file" id="file-input" accept=".pdf"/>
                 <input type="text" name="apiKey" placeholder="Enter API key" required>
+                <input type="checkbox" id="myCheckbox"> Images or no
                 <button type="submit">Submit</button>
             </form>
 
